# rag-ai-stack_v02

./: .env.claude-optimized  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE-DEBUG.md  CONCEPT.md  README.md  backend_debug.py  bootstrap-base.sh  bootstrap.sh  claude-rag-backend-diag.sh  claude-rag-diag.sh  diag-env.sh  diag-output.txt  docker-compose.yml  makefile  pyproject.toml  python_fix.sh  quick_debug.py  repair.sh  requirements.txt  setup-fallback.sh  sitecustomize.py  use_existing_python.sh
.chainlit/translations/: de-DE.json  en-US.json
.github/workflows/: ci.yml
backend/: app.py  chainlit.toml  index.json  requirements.txt
backend/indexer/: requirements.txt
core/adapters/llama_index/: __init__.py  llama_index_adapter.py
core/interfaces/: evaluator.py  indexer.py  response_generator.py  retriever.py
docs/: Knippo-Gedenk-Linsensalat.md  Knoblauchtarte_Yotam-Ottolenghi.md  Kokosmakronen.md  Kuerbiscremesuppe.md  Lebkuchen.md  Linsensalat_Yotam-Ottolenghi.md  Spitzkohl-aus-dem-Backrohr.md  Zimtsterne.md  Zucchini-Auberginen-Auflauf.md  fischduft-auberginen.md  flapjacks-fluessiganteil.md  flapjacks-trockenanteil.md  gedaempftes-haehnchen.md  haehnchen-mit-zuckerschoten.md  hafer-apfel-bars.md  kuerbis-moehren-gemuese.md  lammhackbaellchen.md  maronen-bolognese.md  pulla-finnisches-brot.md
evaluator/: eval.py  tests.json
indexer/: Dockerfile  __init__.py  ingest.py  requirements.txt  watcher.py
tests/: test_ingest.py  test_llama_index_adapter.py
