[tool.poetry]
name = "rag-ai-stack-v02"
version = "0.1.0"
description = "Simple but modular and extensible RAG AI stack to enable you to locally chat with your own documents and other sources."
authors = ["Jonas A. Schmidt <jonas.a.schmidt@gmail.com>"]

# Deaktiviere Paket-Modus (nur für deps, nicht als installierbares Projekt)
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
llama-index = "^0.13.0"
llama-index-llms-ollama = "^0.7.0"
chainlit = "^2.0.0"
watchdog = "^6.0.0"
python-dotenv = "^1.0.0"
pypdf = "^5.1.0"
pydantic = ">=2,<3"
numpy = "^2.3.2"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"
pre-commit = "^4.2.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
