[tool.poetry]
name = "rag-ai-stack-v02"
version = "0.1.0"
description = "Simple but modular and extensible RAG AI stack to enable you to locally chat with your own documents and other sources."
authors = ["Jonas A. Schmidt <jonas.a.schmidt@gmail.com>"]

# Deaktiviere Paket-Modus (nur für deps, nicht als installierbares Projekt)
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
llama-index = { version = "^0.13.0", optional = true }
llama-index-llms-ollama = { version = "^0.7.0", optional = true }
chainlit = "^2.0.0"
watchdog = "^6.0.0"
python-dotenv = "^1.0.0"
pypdf = "^5.1.0"
pydantic = ">=2,<3"
numpy = "^2.3.2"

[tool.poetry.extras]
llama = ["llama-index", "llama-index-llms-ollama"]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"
pre-commit = "^4.2.0"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow to skip during fast runs",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
